# learning-ai-agent

./: .env.example  .gitignore  README.md  ingester.py  main.py  main.ts  package.json  pyproject.toml  requirements.txt  tsconfig.json  weather_server.py
tools/: ingester.py  querier.py  weather_server.py
