[project]
name = "learning-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "mcp>=1.22.0",
]
