[project]
name = "learning-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.8",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-milvus>=0.3.0",
    "langchain-ollama>=1.0.0",
    "mcp>=1.22.0",
    "milvus-lite>=2.5.1",
    "pypdf>=6.3.0",
    "tiktoken>=0.12.0",
]
